<resources>
    <string name="app_name">Medko</string>
    <string name="Login_Title">Login</string>
    <string name="E_mail">E-Mail</string>
    <string name="Password">Password</string>
    <string name="Login">Log In</string>
    <string name="User_Register">Register as user</string>
    <string name="Doctor_register">Register as Doctor</string>
    <string name="User_Registration">User Registration</string>
    <string name="Doctor_Registration">Doctor Registration</string>
    <string name="Full_name">Fullname</string>
    <string name="Mobile">Mobile number</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="Clinic_name">Clinic name</string>
    <string name="Speciality">Speciality</string>
    <string name="title_activity_main_user_page">MainUserPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main_user">MainUser</string>
    <string name="home">Home</string>
    <string name="Search">Search</string>
    <string name="Settings">Settings</string>
    <string name="Doc_name">Doctor name</string>
    <string name="Hospital_name">Hospital Name</string>
    <string name="Profile">Profile</string>
    <string name="doc_pro_un">Doctor Profile Username</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_pass">Change Password</string>
    <string name="Review">Write a review</string>
    <string name="Appointment">Book Appointment</string>
    <string name="Rev">Review</string>
    <string name="QR">QR code</string>
    <string name="Upicode">UPI code</string>
    <string name="Payment">Payment</string>
    <string name="Submit">Submit</string>
    <string name="X">X</string>
    <string name="Success">Successful</string>
    <string name="successfully_made">Your appointment has been \n made successful</string>
    <string name="ok">Okay</string>
    <string name="title_activity_main_doctor_page">MainDoctorPage</string>
    <string name="appoin">Appointments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="History">History</string>
    <string name="r">Review</string>
    <string name="time">Time</string>
    <string name="Call">Call</string>
    <string name="Camera">Camera</string>
    <string name="Remove">Remove</string>
    <string name="Succc">Success</string>
    <string name="suc_made">Your appointment has been Successfully made</string>
    <string name="noApps">You have no Online appointments</string>
    <string name="noAppsOffline">You have no Offline appointments</string>
    <string name="Nohistory">You have no Patient History</string>
    <string name="review">Write a review</string>
    <string name="Message">Message</string>
    <string name="MyHistory">My History</string>
    <string name="EntireHistory">Entire History</string>
    <string name="pending">Your appointment has been successfully made, Be patient until you receive a call.</string>
    <string name="help_signing">Get help signing in.</string>
    <string name="ForgotPass">Forgot Password?</string>
    <string name="eReq">Email is Required</string>
    <string name="recover_mail">Please enter Email to recover your account.</string>
    <string name="Changepass">Change Password</string>
    <string name="oldpass">Enter Old password</string>
    <string name="Newpass">Enter New Password</string>
    <string name="away">The doctor is away/not in clinic</string>
    <string name="notified">We\'ve notified the doctor you made an appointment.</string>
    <string name="UPI_Payment">UPI Payment</string>
    <string name="Payment_Amount">Payment Amount</string>
    <string name="Payment_id">UPI Id</string>
    <string name="pname">Payee Name</string>
    <string name="patientNote">Patient Note</string>
    <string name="Pay">Pay</string>
    <string name="Note">NOTE</string>
    <string name="Inst">Please talk to doctor (or) Receptionist and make sure the slots are available before you make a payment.</string>
    <string name="gpayExample">googlepay@example</string>
    <string name="ppayexample">PhonePay@example</string>
    <string name="paytmexample">Paytm@example</string>
    <string name="Logout">Log Out</string>
    <string name="changepass">Change Password</string>
    <string name="savechanges">Save Changes</string>
    <string name="editprofile">Edit Profile</string>
    <string name="savestatus">Save Status</string>
    <string name="changetodaysstatus">Change Today Status</string>
    <string name="hundo">100</string>
    <string name="rkey_id">rzp_test_voQ3ZCDlKz1PHi</string>
    <string name="_04_10_1998">04/10/1998</string>
</resources>